# aurig-sentinel

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  run.py
.github/workflows/: pre-commit.yml  publish.yml  test.yml
configs/: example.yaml
configs/disabled/: .gitkeep
deployment/: INSTALLATION_COMPARISON.md  SECURITY_BEST_PRACTICES.md  STARTUP_AUTOMATION_GUIDE.txt  SYSTEM_USER_GUIDE.txt  SYSTEM_USER_RECOMMENDATION.md  setup-github-ssh.sh  setup-user.sh  verify_user.sh
deployment/systemd/: install-system.sh  sentinel-logrotate.conf  sentinel.service  sentinel.timer  uninstall-system.sh
deployment/windows/: install.bat  install.ps1  sentinel-task.xml
scripts/: check-no-ai-coauthor.sh  check-no-staging-files.sh
sentinel/: __init__.py  config_validator.py  documentation.py  fetch_code.py  linting.py  main.py  project_setup.py  regression_testing.py  run_context.py  synthesis.py
tests/: __init__.py  test_sentinel_comprehensive.py
tests/fixtures/vhdl/: led_blinker.vhd  simple_counter.vhd
